feat: :sparkles: Creacion de modelado en cajas para vista CREW
Se crea el respectivo modelado en cajas listo para aplicar diseño

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <section class="info__Crews">
+            <article class="info__member">
+                <h1>name</h1>
+                <h3>agency</h3>
+                <p>estado</p>
+                <p>wikipedia</p>
+                <img src="">
+                <p>Participo en:</p>
+            </article>
     
+        </section>
+        <footer>
+            <div class="footer__menu">
+                <img src="">
+                <p>Crew</p>
+            </div>
+        </footer>
+    </main>
 </body>
 </html>
