style: :art: Adicion de estilo al html
Se agrega el estilo base para comenzar a traer info de la api

--- a/index.html
+++ b/index.html
@@ -10,22 +10,57 @@
 <body>
     <main>
         <section class="info__Crews">
-            <article class="info__member">
-                <h1>name</h1>
-                <h3>agency</h3>
-                <p>estado</p>
-                <p>wikipedia</p>
-                <img src="">
-                <p>Participo en:</p>
+            <article class="info__member1">
+                <div class="container__info">
+                    <div class="content__info">
+                        <h1>name</h1>
+                        <h5>agency</h5>
+                        <p>estado</p>
+                        <p>wikipedia</p>
+                        <p>Participo en:</p>
+                    </div>
+                    <div class="image__info">
+                        <img src="../Captura de pantalla 2024-02-20 223439.png">
+                    </div>
+                </div>
             </article>
-    
+            <article class="info__member2">
+                <div class="container__info">
+                    <div class="content__info">
+                        <h1>name</h1>
+                        <h5>agency</h5>
+                        <p>estado</p>
+                        <p>wikipedia</p>
+                        <p>Participo en:</p>
+                    </div>
+                    <div class="image__info">
+                        <img src="../Captura de pantalla 2024-02-20 223439.png">
+                    </div>
+                </div>
+            </article>
+            <article class="info__member3">
+                <div class="container__info">
+                    <div class="content__info">
+                        <h1>name</h1>
+                        <h5>agency</h5>
+                        <p>estado</p>
+                        <p>wikipedia</p>
+                        <p>Participo en:</p>
+                    </div>
+                    <div class="image__info">
+                        <img src="../Captura de pantalla 2024-02-20 223439.png">
+                    </div>
+                </div>
+            </article>
         </section>
-        <footer>
-            <div class="footer__menu">
-                <img src="">
-                <p>Crew</p>
-            </div>
-        </footer>
     </main>
+    <footer>
+        <div class="footer__menu">
+            <article class="article__menu">
+                <img src="storage/img/crew.png">
+                <p>Crew</p>
+            </article>
+        </div>
+    </footer>
 </body>
 </html>
