style: :art: Modificacion de estilo
Se ajusta el estilo de las cajas para aplicar javascript

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <section class="info__Crews">
-            <article class="info__member1">
+            <article class="info__member">
                 <div class="container__info">
                     <div class="content__info">
                         <h1>name</h1>
@@ -24,7 +24,7 @@
                     </div>
                 </div>
             </article>
-            <article class="info__member2">
+            <article class="info__member">
                 <div class="container__info">
                     <div class="content__info">
                         <h1>name</h1>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </article>
-            <article class="info__member3">
+            <article class="info__member">
                 <div class="container__info">
                     <div class="content__info">
                         <h1>name</h1>
