feat: :sparkles: Adicion de JavaScript para interactuar con la API
Se trae la info de la api Crew y se insertan los datos segun la estructura html y se ajusta el diseño

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <section class="info__Crews">
-            <article class="info__member">
+            <!-- <article class="info__member">
                 <div class="container__info">
                     <div class="content__info">
                         <h1>name</h1>
@@ -23,35 +23,7 @@
                         <img src="../Captura de pantalla 2024-02-20 223439.png">
                     </div>
                 </div>
-            </article>
-            <article class="info__member">
-                <div class="container__info">
-                    <div class="content__info">
-                        <h1>name</h1>
-                        <h5>agency</h5>
-                        <p>estado</p>
-                        <p>wikipedia</p>
-                        <p>Participo en:</p>
-                    </div>
-                    <div class="image__info">
-                        <img src="../Captura de pantalla 2024-02-20 223439.png">
-                    </div>
-                </div>
-            </article>
-            <article class="info__member">
-                <div class="container__info">
-                    <div class="content__info">
-                        <h1>name</h1>
-                        <h5>agency</h5>
-                        <p>estado</p>
-                        <p>wikipedia</p>
-                        <p>Participo en:</p>
-                    </div>
-                    <div class="image__info">
-                        <img src="../Captura de pantalla 2024-02-20 223439.png">
-                    </div>
-                </div>
-            </article>
+            </article> -->
         </section>
     </main>
     <footer>
