feat: :sparkles: Creacion de evento para cambio de estilo
Se crea la funcion para el cambioi de stylo segun la vista seleccionada

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link id="styles" rel="stylesheet" href="css/style.css">
     <script type="module" src="js/main.js" defer></script>
     <title>Document</title>
 </head>
@@ -14,8 +14,7 @@
                 <div class="container__info">
                     <div class="content__info">
                         <h1>name</h1>
-                        <h5>agency</h5>
-                        <p>estado</p>
+                        <h5>agency-estado</h5>
                         <p>wikipedia</p>
                         <p>Participo en:</p>
                     </div>
@@ -28,7 +27,7 @@
     </main>
     <footer>
         <div class="footer__menu">
-            <article class="article__menu">
+            <article class="article__crew">
                 <img src="storage/img/crew.png">
                 <p>Crew</p>
             </article>
