chore: :bug: Ajuste cambio de estilo
Se agrega el clear a la section allinfo__content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <section class="info__Crews">
+        <section id="section" class="allinfo__content">
             <!-- <article class="info__member">
                 <div class="container__info">
                     <div class="content__info">
@@ -28,6 +28,10 @@
     <footer>
         <div class="footer__menu">
             <article class="article__crew">
+                <img src="storage/img/crew.png">
+                <p>Crew</p>
+            </article>
+            <article class="article__launches">
                 <img src="storage/img/crew.png">
                 <p>Crew</p>
             </article>
