chore: :bug: Correcion de salida de la info
Se corrige el tema del campo launche, se soluciona buscando por id en el json launches y trayendoel name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <section id="section" class="allinfo__content">
+        <section class="allinfo__content">
             <!-- <article class="info__member">
                 <div class="container__info">
                     <div class="content__info">
