style: :art: Ajuste en el estilo crew
se agrega sombra y tipo de letra

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
     <main>
         <section class="allinfo__content">
-            <!-- <article class="info__member">
+            <!-- ------Estructura Crew------
+            <article class="info__member">
                 <div class="container__info">
                     <div class="content__info">
                         <h1>name</h1>
                         <h5>agency-estado</h5>
-                        <p>wikipedia</p>
+                        <p>Biografia da click <a href"linkWikipedia">aqui</a>
                         <p>Participo en:</p>
                     </div>
                     <div class="image__info">
