--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
 <body>
     <main>
         <section class="allinfo__content">
+            <article class="name__value">
+                <p>prueba</p>
+            </article>
+            <div class="info__value">
+                <article class="rigth__container">
+                    <p>prueba</p>
+                </article>
+                <article class="center__container">
+                    <article class="content__graphics">
+                        <p>prueba</p>
+                    </article>
+                    <article class="content__image">
+                        <p>prueba</p>
+                    </article>
+                    <article class="content__scroll">
+                        <p>prueba</p>
+                    </article>
+                </article>
+                <article class="left__container">
+                    <p>prueba</p>
+                </article>
+            </div>
+
             <!-- ------Estructura Crew------
             <article class="info__member">
                 <div class="container__info">
@@ -38,5 +61,8 @@
             </article>
         </div>
     </footer>
+    <!-- <div class="section__pagination">
+        
+    </div> -->
 </body>
 </html>
