feat: :sparkles: Creacion de funcion trayendo info de la api dragons
Se esta trayendo info del json dragons, en proceos la mapeada de datos en el html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <main>
         <section class="allinfo__content">
+            <!-- -----Estructura principal ----- 
             <article class="name__value">
                 <p>prueba</p>
             </article>
             <div class="info__value">
-                <article class="rigth__container">
+                <article class="left__container">
                     <p>prueba</p>
                 </article>
                 <article class="center__container">
@@ -22,16 +23,34 @@
                         <p>prueba</p>
                     </article>
                     <article class="content__image">
-                        <p>prueba</p>
+                        <img src="https://farm9.staticflickr.com/8618/16649075267_d18cbb4342_b.jpg" referrerpolicy="no-referrer">
+                        <img src="https://farm3.staticflickr.com/2815/32761844973_4b55b27d3c_b.jpg" referrerpolicy="no-referrer">
                     </article>
                     <article class="content__scroll">
-                        <p>prueba</p>
+                        <div class="scroll__left">
+                            <p>sad</p>
+                            <p>sad</p>
+                            <p>sad</p>
+                            <p>sad</p>
+                            <p>sad</p>
+                            <p>sad</p>
+                        </div>
+                        <div class="scroll__rigth">
+                            <p>dasd</p>
+                            <p>sad</p>
+                            <p>sad</p>
+                            <p>sad</p>
+                            <p>sad</p>
+                            <p>sad</p>
+                            <p>sad</p>
+                        </div>
+                        <div></div>
                     </article>
                 </article>
-                <article class="left__container">
+                <article class="rigth__container">
                     <p>prueba</p>
                 </article>
-            </div>
+            </div> -->
 
             <!-- ------Estructura Crew------
             <article class="info__member">
