feat: :art: Cambio de estructura y estilo
Se cambia la maquetacion de la vista principal para mejor manejo de los datos

--- a/index.html
+++ b/index.html
@@ -10,47 +10,152 @@
 <body>
     <main>
         <section class="allinfo__content">
-            <!-- -----Estructura principal ----- 
-            <article class="name__value">
-                <p>prueba</p>
-            </article>
-            <div class="info__value">
-                <article class="left__container">
-                    <p>prueba</p>
-                </article>
-                <article class="center__container">
-                    <article class="content__graphics">
-                        <p>prueba</p>
-                    </article>
-                    <article class="content__image">
-                        <img src="https://farm9.staticflickr.com/8618/16649075267_d18cbb4342_b.jpg" referrerpolicy="no-referrer">
-                        <img src="https://farm3.staticflickr.com/2815/32761844973_4b55b27d3c_b.jpg" referrerpolicy="no-referrer">
-                    </article>
-                    <article class="content__scroll">
-                        <div class="scroll__left">
-                            <p>sad</p>
-                            <p>sad</p>
-                            <p>sad</p>
-                            <p>sad</p>
-                            <p>sad</p>
-                            <p>sad</p>
+            <div class="column left">
+                <ul class="list">
+                    <li><img src="storage/img/item.svg"> Item 1</li>
+                    <li><img src="storage/img/item.svg"> Item 2</li>
+                    <li><img src="storage/img/item.svg"> Item 3</li>
+                </ul>
+            </div>
+            <div class="column center">
+                <div class="section">
+                    <div class="title-section">
+                        <h2>Título</h2>
+                        <div class="circular-bar">
+                            <div class="circular-chart">
+                                <svg viewBox="0 0 100 100">
+                                    <circle class="bg" cx="50" cy="50" r="40"></circle>
+                                    <circle class="progress" cx="50" cy="50" r="40" style="stroke-dashoffset: 75.36; stroke: #4caf50;"></circle>
+                                </svg>
+                                <span class="text">70%</span>
+                            </div>
+                            <div class="circular-chart">
+                                <svg viewBox="0 0 100 100">
+                                    <circle class="bg" cx="50" cy="50" r="40"></circle>
+                                    <circle class="progress" cx="50" cy="50" r="40" style="stroke-dashoffset: 37.68; stroke: #2196f3;"></circle>
+                                </svg>
+                                <span class="text">85%</span>
+                            </div>
                         </div>
-                        <div class="scroll__rigth">
-                            <p>dasd</p>
-                            <p>sad</p>
-                            <p>sad</p>
-                            <p>sad</p>
-                            <p>sad</p>
-                            <p>sad</p>
-                            <p>sad</p>
+                    </div>
+                </div>
+                <div class="horizontal-sections">
+                    <div class="scroll-container">
+                        <h5>Information Rocket</h5>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td>Dato 1efwffergegegr</td>
+                                    <td>Dato 2regergergegre</td>
+                                </tr>
+                                <tr>
+                                    <td>Dato 3</td>
+                                    <td>Dato 4</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="image-container">
+                        <img src="https://farm3.staticflickr.com/2815/32761844973_4b55b27d3c_b.jpg" alt="Imagen 1">
+                        <img src="https://farm3.staticflickr.com/2815/32761844973_4b55b27d3c_b.jpg" alt="Imagen 2">
+                    </div>
+                    <div class="scroll-container">
+                        <h5>Engine Information</h5>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td>Dato 1sadadasdasdasda</td>
+                                    <td>Dato 2asdadsadasdasdas</td>
+                                </tr>
+                                <tr>
+                                    <td>Dato 3</td>
+                                    <td>Dato 4</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="trapezoid-container">
+                    <div class="trapexoid-scroll">
+                        <div class="hexagon">
+                            <div class="hexagon-inner">
+                                <img src="storage/img/crew.png">
+                                <span>Vista 1</span>
+                            </div>
                         </div>
-                        <div></div>
-                    </article>
-                </article>
-                <article class="rigth__container">
-                    <p>prueba</p>
-                </article>
-            </div> -->
+                        <div class="hexagon">
+                            <div class="hexagon-inner">
+                                <img src="storage/img/crew.png">
+                                <span>Vista 2</span>
+                            </div>
+                        </div>
+                        <div class="hexagon">
+                            <div class="hexagon-inner">
+                                <img src="storage/img/crew.png">
+                                <span>Vista 3</span>
+                            </div>
+                        </div>
+                        <div class="hexagon">
+                            <div class="hexagon-inner">
+                                <img src="storage/img/crew.png">
+                                <span>Vista 4</span>
+                            </div>
+                        </div>
+                        <div class="hexagon">
+                            <div class="hexagon-inner">
+                                <img src="storage/img/crew.png">
+                                <span>Vista 5</span>
+                            </div>
+                        </div>
+                        <div class="hexagon">
+                            <div class="hexagon-inner">
+                                <img src="vista3.png">
+                                <span>Vista 6</span>
+                            </div>
+                        </div>
+                        <div class="hexagon">
+                            <div class="hexagon-inner">
+                                <img src="vista3.png">
+                                <span>Vista 7</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column right">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>Item 1</td>
+                            <td>Texto</td>
+                        </tr>
+                        <tr>
+                            <td><div class="progress-bar" style="width: 85%; background-color: #f44336;">85%</div></td>
+                            <td>Texto</td>    
+                        </tr>
+                        <tr>
+                            <td>Item 1</td>
+                            <td>Texto</td>
+                        </tr>
+                        <tr>
+                            <td><div class="progress-bar" style="width: 85%; background-color: #f44336;">85%</div></td>
+                            <td>Texto</td>    
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="pagination-container">
+                    <a href="#" class="pagination">1</a>
+                    <a href="#" class="pagination">2</a>
+                    <a href="#" class="pagination">3</a>
+                    <a href="#" class="pagination">4</a>
+                    <a href="#" class="pagination">5</a>
+                    <a href="#" class="pagination">6</a>
+                    <a href="#" class="pagination">7</a>
+                    <a href="#" class="pagination">8</a>
+                    <a href="#" class="pagination">9</a>
+                    <a href="#" class="pagination">10</a>
+                </div>
+            </div>
 
             <!-- ------Estructura Crew------
             <article class="info__member">
@@ -68,18 +173,6 @@
             </article> -->
         </section>
     </main>
-    <footer>
-        <div class="footer__menu">
-            <article class="article__crew">
-                <img src="storage/img/crew.png">
-                <p>Crew</p>
-            </article>
-            <article class="article__launches">
-                <img src="storage/img/crew.png">
-                <p>Crew</p>
-            </article>
-        </div>
-    </footer>
     <!-- <div class="section__pagination">
         
     </div> -->
