--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <main>
         <section class="allinfo__content">
+            <!-- ----Estructura principal ----
             <div class="column left">
                 <ul class="list">
-                    <li><img src="storage/img/item.svg"> Item 1</li>
+                    <li><img src="storage/img/item.svg"> Item 0</li>
                     <li><img src="storage/img/item.svg"> Item 2</li>
                     <li><img src="storage/img/item.svg"> Item 3</li>
                 </ul>
@@ -32,7 +33,7 @@
                             <div class="circular-chart">
                                 <svg viewBox="0 0 100 100">
                                     <circle class="bg" cx="50" cy="50" r="40"></circle>
-                                    <circle class="progress" cx="50" cy="50" r="40" style="stroke-dashoffset: 37.68; stroke: #2196f3;"></circle>
+                                    <circle class="progress" cx="50" cy="50" r="40" style="stroke-dashoffset: 97.68; stroke: #2196f3;"></circle>
                                 </svg>
                                 <span class="text">85%</span>
                             </div>
@@ -78,13 +79,13 @@
                 <div class="trapezoid-container">
                     <div class="trapexoid-scroll">
                         <div class="hexagon">
-                            <div class="hexagon-inner">
+                            <div class="hexagon-inner" id="crew">
                                 <img src="storage/img/crew.png">
                                 <span>Vista 1</span>
                             </div>
                         </div>
                         <div class="hexagon">
-                            <div class="hexagon-inner">
+                            <div class="hexagon-inner" id="dragons">
                                 <img src="storage/img/crew.png">
                                 <span>Vista 2</span>
                             </div>
@@ -155,7 +156,7 @@
                     <a href="#" class="pagination">9</a>
                     <a href="#" class="pagination">10</a>
                 </div>
-            </div>
+            </div> -->
 
             <!-- ------Estructura Crew------
             <article class="info__member">
@@ -173,8 +174,5 @@
             </article> -->
         </section>
     </main>
-    <!-- <div class="section__pagination">
-        
-    </div> -->
 </body>
 </html>
