feat: :construction: Trabjando en la plantilla Rocket
Seesta creando las funciones para traer la info de rockets

--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
                 <div class="hexagon">
                     <div class="hexagon-inner" id="crew">
                         <img src="storage/img/crew.png">
-                        <span>Vista 1</span>
+                        <span>Crew</span>
                     </div>
                 </div>
                 <div class="hexagon">
                     <div class="hexagon-inner" id="dragons">
                         <img src="storage/img/crew.png">
-                        <span>Vista 2</span>
+                        <span>Dragons</span>
                     </div>
                 </div>
                 <div class="hexagon">
-                    <div class="hexagon-inner">
+                    <div class="hexagon-inner" id="rockets">
                         <img src="storage/img/crew.png">
-                        <span>Vista 3</span>
+                        <span>Rockets</span>
                     </div>
                 </div>
                 <div class="hexagon">
