feat: :sparkles: Creacion de vista Launches
Se completa la vist launches

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </article> -->
-            
+
         </section>
         <div class="trapezoid-container">
             <div class="trapexoid-scroll">
@@ -149,9 +149,9 @@
                     </div>
                 </div>
                 <div class="hexagon">
-                    <div class="hexagon-inner">
+                    <div class="hexagon-inner" id="launches">
                         <img src="storage/img/crew.png">
-                        <span>Vista 4</span>
+                        <span>launches</span>
                     </div>
                 </div>
                 <div class="hexagon">
