feat: :construction: Creando vista history

--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
                 <div class="hexagon">
                     <div class="hexagon-inner" id="launches">
                         <img src="storage/img/crew.png">
-                        <span>launches</span>
+                        <span>Launches</span>
                     </div>
                 </div>
                 <div class="hexagon">
-                    <div class="hexagon-inner">
+                    <div class="hexagon-inner" id="history">
                         <img src="storage/img/crew.png">
-                        <span>Vista 5</span>
+                        <span>History</span>
                     </div>
                 </div>
                 <div class="hexagon">
