feat: :sparkles: Creacion vista cores
plantilla de cores creada, validando fondp de todas las vistas

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                     </div>
                 </div>
                 <div class="hexagon">
-                    <div class="hexagon-inner">
-                        <img src="vista3.png">
-                        <span>Vista 6</span>
+                    <div class="hexagon-inner" id="cores">
+                        <img src="storage/img/crew.png">
+                        <span>Cores</span>
                     </div>
                 </div>
                 <div class="hexagon">
