feat: :sparkles: Vista capsulas creada
Se toma de referencia cores, para crear vista capsulas, se ajusta nuavmente el diseño

--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                     </div>
                 </div>
                 <div class="hexagon">
-                    <div class="hexagon-inner">
-                        <img src="vista3.png">
-                        <span>Vista 7</span>
+                    <div class="hexagon-inner" id="capsules">
+                        <img src="storage/img/crew.png">
+                        <span>Capsules</span>
                     </div>
                 </div>
             </div>
