feat: :sparkles: Creacion de vista Landpads
Se crea la vista landpadsy se ajusta el diseño, deacuerdo a la estructura implementada

--- a/index.html
+++ b/index.html
@@ -172,6 +172,12 @@
                         <span>Capsules</span>
                     </div>
                 </div>
+                <div class="hexagon">
+                    <div class="hexagon-inner" id="landpads">
+                        <img src="storage/img/crew.png">
+                        <span>Landpads</span>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
