feat: :sparkles: Creacion vista Landpads

--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
                         <span>Landpads</span>
                     </div>
                 </div>
+                <div class="hexagon">
+                    <div class="hexagon-inner" id="launchpads">
+                        <img src="storage/img/crew.png">
+                        <span>Launchpads</span>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
