chore: :art: Cambio de imagenes del menu
Se cambian la simagens relacionadas al menu

--- a/index.html
+++ b/index.html
@@ -138,49 +138,49 @@
                 </div>
                 <div class="hexagon">
                     <div class="hexagon-inner" id="dragons">
-                        <img src="storage/img/crew.png">
+                        <img src="storage/img/dragons.png">
                         <span>Dragons</span>
                     </div>
                 </div>
                 <div class="hexagon">
                     <div class="hexagon-inner" id="rockets">
-                        <img src="storage/img/crew.png">
+                        <img src="storage/img/rocket.png">
                         <span>Rockets</span>
                     </div>
                 </div>
                 <div class="hexagon">
                     <div class="hexagon-inner" id="launches">
-                        <img src="storage/img/crew.png">
+                        <img src="storage/img/launches.png">
                         <span>Launches</span>
                     </div>
                 </div>
                 <div class="hexagon">
                     <div class="hexagon-inner" id="history">
-                        <img src="storage/img/crew.png">
+                        <img src="storage/img/historia.png">
                         <span>History</span>
                     </div>
                 </div>
                 <div class="hexagon">
                     <div class="hexagon-inner" id="cores">
-                        <img src="storage/img/crew.png">
+                        <img src="storage/img/cores.png">
                         <span>Cores</span>
                     </div>
                 </div>
                 <div class="hexagon">
                     <div class="hexagon-inner" id="capsules">
-                        <img src="storage/img/crew.png">
+                        <img src="storage/img/capsule.png">
                         <span>Capsules</span>
                     </div>
                 </div>
                 <div class="hexagon">
                     <div class="hexagon-inner" id="landpads">
-                        <img src="storage/img/crew.png">
+                        <img src="storage/img/landspad.png">
                         <span>Landpads</span>
                     </div>
                 </div>
                 <div class="hexagon">
                     <div class="hexagon-inner" id="launchpads">
-                        <img src="storage/img/crew.png">
+                        <img src="storage/img/launchpad.png">
                         <span>Launchpads</span>
                     </div>
                 </div>
